# PPP

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  README.md  pyproject.toml  wip-cookiecutter.json
ppp/: Animation  Animation.py  Animation_CPP  Animation_CPP.py  __init__.py  calc_starter.py  testingfile.py
ppp/Animation/: __init__.py
ppp/Conc_Calc/: __init__.py
ppp/Conc_Calc_CPP/: Animation.prof  Build_Prof_Parallel.sh  CMakeLists.txt  Calc_CPP.cpp  Calc_CPP.h  Calc_CPP_Profiler.cpp  Conc_Calc_CPP.cpp  Conc_Calc_CPP.h  Conc_Calc_CPP.md  Conc_Vector_Class.cpp  Conc_Vector_Class.h  Genetic_algo.cpp  O2vent_log.txt  Params.cpp  Params.h  Params_binding_nb.cpp  Reac_Rate_CPP.cpp  Reac_Rate_CPP.h  build_profiling.sh  calc_cpp_app_profiler  calc_cpp_app_profiler.out  ga_log.txt
ppp/calc/: __init__.py
ppp/params/: __init__.py
ppp/reac_rate/: __init__.py
tests/ppp/: test_ppp.py
tests/ppp/Animation/: test_Animation.py
tests/ppp/Conc_Calc/: test_Conc_Calc.py
tests/ppp/Conc_Calc_CPP/: test_Conc_Calc_CPP.py
tests/ppp/calc/: test_calc.py
tests/ppp/calc.py/: test_calc.py.py
tests/ppp/params/: test_params.py
tests/ppp/reac_rate/: test_reac_rate.py
tests/ppp/test/: test_test.py
tests/ppp/test_pyton_file/: test_test_pyton_file.py
