[tool.poetry]
name = "PPP"
version = "0.0.0"
description = "ppp"
authors = ["Yanni Van Der Voort <yanni.vandervoort@student.uantwerpen.be>"]
license = "MIT"

readme = 'README.md'

repository = ""
homepage = ""

keywords = []

[tool.poetry.dependencies]
python = "^3.12.2"

[tool.poetry.group0.dev.dependencies]
bump2version = "^1.0.1"
pytest = "^7.3.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-material = "^9.1.16"
mkdocs-autorefs = "^0.4.1"

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
